@@ -1,3 +1,12 @@
+<STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0210</STRONG> includes the following changes:
+<UL>
+	<LI> Fixed a keypad mode problem. Cursor keys should behave better now.</LI>
+	<LI> Fixed a bug that causes dead session be left open sometimes (#1653347).</LI>
+	<LI> Adjusted the full screen mode behavior, so you are less likely to be stuck.</LI>
+	<LI> Added selectedTextColor into Applescript.</LI>
+</UL>
+
 <STRONG>Release 0.9.5</STRONG> 2/1/07<BR>
 After several months of developping, we proudly present you the latest release of iTerm. Many users
 have provided us with great feed backs and helped us nail down bugs. Lots of thanks to all of you!
